Fix z-index on level 2

--- a/scss/_toolbar.layout.scss
+++ b/scss/_toolbar.layout.scss
@@ -109,8 +109,10 @@
     .menu--level-2 {
         display: none;
         position: absolute;
+        z-index: 10;
         top: 100%; left: 0;
         padding: 10px 0;
+
 
         border-radius: 2px;
     }
